--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
         <!-- aside -->
         <aside>
             <h3>Aside heading</h3>
-            <p>
+            <p style="margin-top:0%;">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur nesciunt 
                 recusandae non dolor suscipit, eum repellendus doloribus perferendis iure corrupti 
                 provident quo modi velit beatae quam cumque. Perferendis, beatae aperiam!
